@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libxcb/Attic/libxcb-1.1.ebuild,v 1.11 2009/05/04 17:06:59 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libxcb/Attic/libxcb-1.1.ebuild,v 1.12 2009/12/14 10:13:44 remi Exp $
 
 # Must be before x-modular eclass is inherited
 SNAPSHOT="yes"
@@ -10,7 +10,6 @@ inherit x-modular
 DESCRIPTION="X C-language Bindings library"
 HOMEPAGE="http://xcb.freedesktop.org/"
 SRC_URI="http://xcb.freedesktop.org/dist/${P}.tar.bz2"
-LICENSE="X11"
 KEYWORDS="alpha amd64 arm hppa ia64 ~m68k ~mips ppc ppc64 s390 sh sparc x86 ~x86-fbsd"
 IUSE="doc"
 RDEPEND="x11-libs/libXau
