@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libxcb/Attic/libxcb-1.4-r1.ebuild,v 1.7 2009/10/26 20:55:06 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libxcb/Attic/libxcb-1.4-r1.ebuild,v 1.8 2009/12/14 10:13:44 remi Exp $
 
 EAPI="2"
 
@@ -12,7 +12,6 @@ inherit x-modular
 DESCRIPTION="X C-language Bindings library"
 HOMEPAGE="http://xcb.freedesktop.org/"
 SRC_URI="http://xcb.freedesktop.org/dist/${P}.tar.bz2"
-LICENSE="X11"
 
 KEYWORDS="~alpha amd64 arm hppa ~ia64 ~m68k ~mips ppc ~ppc64 ~s390 ~sh ~sparc x86 ~x86-fbsd"
 IUSE="doc selinux"
