@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/libxcb
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libxcb/ChangeLog,v 1.48 2009/12/13 21:36:17 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libxcb/ChangeLog,v 1.49 2009/12/14 10:13:44 remi Exp $
+
+  14 Dec 2009; Rémi Cardona <remi@gentoo.org> libxcb-1.1.ebuild,
+  libxcb-1.4-r1.ebuild:
+  change LICENSE to MIT
 
   13 Dec 2009; Tomáš Chvátal <scarabeus@gentoo.org>
   -libxcb-1.1.90.1.ebuild:
